# Fastapi-Swipe-Microservice

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py
src/: main.py
src/config/: project_config.py
src/config/broker/: kafka_accessor.py
src/models/: swipe_model.py
src/swipe/adapters/consumers/: kafka_consumer.py
src/swipe/dependencies/: swipe_dependency.py
src/swipe/exceptions/: swipe_exceptions.py
src/swipe/repositories/: swipe_repository.py
