[tool.poetry]
name = "swipe-service"
version = "0.1.0"
description = ""
authors = ["Boris Averin <89068157313@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.11.3,<3.0.0"
alembic = ">=1.15.2,<2.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
asyncpg = ">=0.30.0,<0.31.0"
greenlet = ">=3.2.1,<4.0.0"
python-jose = ">=3.4.0,<4.0.0"
aiokafka = ">=0.12.0,<0.13.0"
gunicorn = ">=23.0.0,<24.0.0"
fastapi-injectable = ">=1.1.0,<2.0.0"
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.2,<0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__"
]

# выбор наборов правил
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "N", # pep8-naming
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "RUF", # Ruff-specific rules
]

line-length = 88

ignore = [
    "B008",
    "RUF001",
    "RUF002",
    "N812"
]